; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/iio/addac/extr_adt7316-spi.c_adt7316_spi_multi_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/iio/addac/extr_adt7316-spi.c_adt7316_spi_multi_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }

@ADT7316_REG_MAX_ADDR = common dso_local global i32 0, align 4
@ADT7316_SPI_CMD_WRITE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"SPI write error\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32*)* @adt7316_spi_multi_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adt7316_spi_multi_write(i8* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.spi_device*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = bitcast i8* %16 to %struct.spi_device*
  store %struct.spi_device* %17, %struct.spi_device** %10, align 8
  %18 = load i32, i32* @ADT7316_REG_MAX_ADDR, align 4
  %19 = add nsw i32 %18, 2
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %11, align 8
  %22 = alloca i32, i64 %20, align 16
  store i64 %20, i64* %12, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @ADT7316_REG_MAX_ADDR, align 4
  %25 = icmp sgt i32 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i32, i32* @ADT7316_REG_MAX_ADDR, align 4
  store i32 %27, i32* %8, align 4
  br label %28

28:                                               ; preds = %26, %4
  %29 = load i32, i32* @ADT7316_SPI_CMD_WRITE, align 4
  %30 = getelementptr inbounds i32, i32* %22, i64 0
  store i32 %29, i32* %30, align 16
  %31 = load i32, i32* %7, align 4
  %32 = getelementptr inbounds i32, i32* %22, i64 1
  store i32 %31, i32* %32, align 4
  store i32 0, i32* %13, align 4
  br label %33

33:                                               ; preds = %47, %28
  %34 = load i32, i32* %13, align 4
  %35 = load i32, i32* %8, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %50

37:                                               ; preds = %33
  %38 = load i32*, i32** %9, align 8
  %39 = load i32, i32* %13, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* %13, align 4
  %44 = add nsw i32 %43, 2
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %22, i64 %45
  store i32 %42, i32* %46, align 4
  br label %47

47:                                               ; preds = %37
  %48 = load i32, i32* %13, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %13, align 4
  br label %33

50:                                               ; preds = %33
  %51 = load %struct.spi_device*, %struct.spi_device** %10, align 8
  %52 = load i32, i32* %8, align 4
  %53 = add nsw i32 %52, 2
  %54 = call i32 @spi_write(%struct.spi_device* %51, i32* %22, i32 %53)
  store i32 %54, i32* %14, align 4
  %55 = load i32, i32* %14, align 4
  %56 = icmp slt i32 %55, 0
  br i1 %56, label %57, label %62

57:                                               ; preds = %50
  %58 = load %struct.spi_device*, %struct.spi_device** %10, align 8
  %59 = getelementptr inbounds %struct.spi_device, %struct.spi_device* %58, i32 0, i32 0
  %60 = call i32 @dev_err(i32* %59, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %61 = load i32, i32* %14, align 4
  store i32 %61, i32* %5, align 4
  store i32 1, i32* %15, align 4
  br label %64

62:                                               ; preds = %50
  %63 = load i32, i32* %14, align 4
  store i32 %63, i32* %5, align 4
  store i32 1, i32* %15, align 4
  br label %64

64:                                               ; preds = %62, %57
  %65 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %65)
  %66 = load i32, i32* %5, align 4
  ret i32 %66
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @spi_write(%struct.spi_device*, i32*, i32) #2

declare dso_local i32 @dev_err(i32*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
